--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/common": "2.0.0-rc.4",
-        "@angular/compiler": "2.0.0-rc.4",
-        "@angular/core": "2.0.0-rc.4",
-        "@angular/forms": "0.2.0",
-        "@angular/http": "2.0.0-rc.4",
-        "@angular/platform-browser": "2.0.0-rc.4",
-        "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-        "@angular/router": "3.0.0-beta.2",
-        "core-js": "^2.4.0",
+        "@angular/common": "2.0.0-rc.5",
+        "@angular/compiler": "2.0.0-rc.5",
+        "@angular/core": "2.0.0-rc.5",
+        "@angular/forms": "0.3.0",
+        "@angular/http": "2.0.0-rc.5",
+        "@angular/platform-browser": "2.0.0-rc.5",
+        "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+        "@angular/router": "3.0.0-rc.1",
+        "core-js": "^2.4.1",
         "reflect-metadata": "0.1.3",
         "rxjs": "5.0.0-beta.6",
-        "systemjs": "0.19.31",
+        "systemjs": "0.19.36",
         "zone.js": "0.6.12"
     },
     "devDependencies": {
@@ -39,7 +39,7 @@
         "protractor": "3.3.0",
         "ts-node": "0.5.5",
         "tslint": "3.11.0",
-        "typescript": "1.8.10",
+        "typescript": "^1.8.10",
         "typings": "^1.0.4"
     }
 }
